[package]
name = "twisterad"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Rotate twister ads"
keywords = ["twister", "twister-core", "p2p", "daemon", "rust-bitcoincore-rpc"]
categories = ["network-programming", "command-line-utilities"]
repository = "https://github.com/twisterarmy/twisterad"

[dependencies]
bitcoincore-rpc = { git = "https://github.com/twisterarmy/rust-bitcoincore-rpc.git", branch = "twister" }
clap = { version = "4.5.34", features = ["derive"] }
serde = { version = "1.0.219" }